fixup! Use URI instead of URL